<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/poster_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:maxLines="2"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/poster_wrapper"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p"
        tools:text="@string/movie_title" />

    <TextView
        android:id="@+id/movie_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="@color/whiteSecondary"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/poster_wrapper"
        app:layout_constraintTop_toBottomOf="@id/movie_title"
        tools:targetApi="p"
        tools:text="@string/movie_overview" />

    <TextView
        android:id="@+id/movie_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/poster_wrapper"
        tools:text="10" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="8dp"
        android:text="@string/rating_divider"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/movie_rating" />
</androidx.constraintlayout.widget.ConstraintLayout>